--- a/app/src/main/res/layout/activity_edit_service.xml
+++ b/app/src/main/res/layout/activity_edit_service.xml
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateTint="@color/mainBlue"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/topPanel" />
 
     <ScrollView
         android:id="@+id/editServiceScroll"
@@ -26,7 +26,7 @@
         app:layout_constraintBottom_toTopOf="@+id/editServiceBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topPanelLayout">
+        app:layout_constraintTop_toBottomOf="@id/topPanel">
 
         <LinearLayout
             android:id="@+id/mainEditServiceLayout"
