--- a/app/src/main/res/layout/part_bottom_panel.xml
+++ b/app/src/main/res/layout/part_bottom_panel.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/bottomNavigationView"
+    android:id="@+id/bottomPanel"
     style="@style/bottomNavigation"
     app:layout_constraintBottom_toBottomOf="parent"
     app:menu="@menu/bottom_navigation_menu" />
