--- a/app/src/main/res/layout/subscribers.xml
+++ b/app/src/main/res/layout/subscribers.xml
@@ -11,10 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout">
+        app:layout_constraintTop_toBottomOf="@+id/topPanel">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/resultsSubscribersRecycleView"
@@ -30,10 +30,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Нет подписок"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/topPanel" />
 
     <ProgressBar
         android:id="@+id/progressBarSubscribers"
@@ -41,10 +41,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateTint="@color/mainBlue"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/topPanel" />
 
     <include layout="@layout/part_bottom_panel" />
 
