--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -36,11 +36,11 @@
                         style="@style/wideVerticalBlock"
                         android:background="@color/mainBlue"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/topPanelLayout">
+                        app:layout_constraintTop_toBottomOf="@id/topPanel">
 
                         <LinearLayout
                             style="@style/wideHorizontalBlock"
-                            app:layout_constraintTop_toBottomOf="@id/topPanelLayout">
+                            app:layout_constraintTop_toBottomOf="@id/topPanel">
 
                             <RelativeLayout
                                 style="@style/highHorizontalBlock"
@@ -168,7 +168,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/bottom_panel_height"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+            app:layout_constraintBottom_toTopOf="@id/bottomPanel"
             app:layout_constraintTop_toBottomOf="@id/collapsingProfileLayout" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
