--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -12,7 +12,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout">
+        app:layout_constraintTop_toBottomOf="@+id/topPanel">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,7 +61,7 @@
                 <TextView
                     style="@style/wideLabel"
                     android:text="Время"
-                    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" />
+                    app:layout_constraintBottom_toTopOf="@+id/bottomPanel" />
 
                 <com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.CustomGridLayout
                     android:id="@+id/timeScheduleGrid"
@@ -75,7 +75,7 @@
     <TextView
         style="@style/wideLabel"
         android:background="@color/grey40"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" />
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel" />
 
     <include layout="@layout/part_bottom_panel" />
 
