--- a/app/src/main/res/layout/creation_service.xml
+++ b/app/src/main/res/layout/creation_service.xml
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toTopOf="@+id/addServiceCreationServiceBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout">
+        app:layout_constraintTop_toBottomOf="@+id/topPanel">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -124,7 +124,7 @@
         android:id="@+id/addServiceCreationServiceBtn"
         style="@style/mainButton"
         android:text="@string/addServices"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -132,7 +132,7 @@
         android:id="@+id/continueCreationServiceBtn"
         style="@style/mainButton"
         android:text="Продолжить"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
