--- a/app/src/main/res/layout/dialogs.xml
+++ b/app/src/main/res/layout/dialogs.xml
@@ -13,10 +13,10 @@
         android:gravity="center"
         android:layout_height="wrap_content"
         android:text="Нет диалогов"
-        app:layout_constraintBottom_toTopOf="@+id/topPanelLayout"
+        app:layout_constraintBottom_toTopOf="@+id/topPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView" />
+        app:layout_constraintTop_toBottomOf="@+id/bottomPanel" />
 
     <ProgressBar
         android:id="@+id/progressBarDialogs"
@@ -24,10 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateTint="@color/mainBlue"
-        app:layout_constraintBottom_toTopOf="@+id/topPanelLayout"
+        app:layout_constraintBottom_toTopOf="@+id/topPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView" />
+        app:layout_constraintTop_toBottomOf="@+id/bottomPanel" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultsDialogsRecycleView"
@@ -35,10 +35,10 @@
         android:layout_height="0dp"
         android:scrollbars="none"
         android:layout_margin="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout"/>
+        app:layout_constraintTop_toBottomOf="@+id/topPanel"/>
 
     <include layout="@layout/part_bottom_panel" />
 
