--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toTopOf="@+id/editServiceEditServiceBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout">
+        app:layout_constraintTop_toBottomOf="@+id/topPanel">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,7 +110,7 @@
     android:text="@string/saveData"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+    app:layout_constraintBottom_toTopOf="@id/bottomPanel"
     android:layout_marginBottom="1dp" />
 
     <include layout="@layout/part_bottom_panel"/>
