--- a/app/src/main/res/layout/service_activity.xml
+++ b/app/src/main/res/layout/service_activity.xml
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateTint="@color/mainBlue"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/topPanel" />
 
     <ScrollView
         android:id="@+id/mainServiceScroll"
@@ -27,7 +27,7 @@
         app:layout_constraintBottom_toTopOf="@+id/scheduleServiceBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout">
+        app:layout_constraintTop_toBottomOf="@+id/topPanel">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -157,7 +157,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Расписание"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
