--- a/app/src/main/res/layout/top_panel_k.xml
+++ b/app/src/main/res/layout/top_panel_k.xml
@@ -35,8 +35,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:padding="10dp"
-        android:text="@string/edit_ico" />
+        android:padding="10dp" />
 
     <TextView
         android:id="@+id/searchTopPanelText"
