--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,7 +49,7 @@
     </style>
 
     <style name="topTitleText">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
@@ -112,6 +112,16 @@
         <item name="android:layout_marginStart">2dp</item>
         <item name="android:layout_marginEnd">2dp</item>
         <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="cornerRadius">18dp</item>
+    </style>
+
+    <style name="outlineButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="strokeColor">@color/darkBlue</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="android:textColor">@color/darkBlue</item>
         <item name="cornerRadius">18dp</item>
     </style>
 
