--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -7,23 +7,20 @@
 
     <include layout="@layout/part_top_panel" />
 
-    <LinearLayout
-        android:id="@+id/searchMainScreenLayout"
+    <com.miguelcatalan.materialsearchview.MaterialSearchView
+        android:id="@+id/searchPanelMainScreenSearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="@+id/topPanelLayout" />
 
     <LinearLayout
         android:id="@+id/borderMainScreenLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/topPanel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchPanelMainScreenSearchView" />
 
     <!-- Категории -->
     <HorizontalScrollView
@@ -104,7 +101,7 @@
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultsMainScreenRecycleView"
@@ -118,8 +115,8 @@
 
     <TextView
         android:id="@+id/noResultMainScreenText"
-        android:gravity="center"
         style="@style/mainTextProfile"
+        android:gravity="center"
         android:text="В вашем регионе нет услуг :("
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
