--- a/app/src/main/res/layout/creation_service.xml
+++ b/app/src/main/res/layout/creation_service.xml
@@ -10,7 +10,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="2dp"
         android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/addServiceCreationServiceBtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,7 +18,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
@@ -79,7 +78,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/descriptionCreationServiceInput"
-                        android:inputType="textCapSentences"
+                        android:inputType="textMultiLine|textCapSentences"
+                        android:maxLines="10"
                         style="@style/materialInput" />
 
                 </com.google.android.material.textfield.TextInputLayout>
