--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="mainBlue">#0093B7</color>
     <color name="mainBlue40">#660093B7</color>
     <color name="darkBlue">#005F89</color>
     <color name="darkBlue40">#66005F89</color>
     <color name="backgroundLightBlue">#D1E1E5</color>
 
-    <color name="white">#FFFFFF</color>
+    <color name="white" tools:override="true">#FFFFFF</color>
     <color name="white80">#CCFFFFFF</color>
     <color name="white50">#80FFFFFF</color>
     <color name="black">#000000</color>
