--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -119,6 +119,15 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="infoText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/darkBlue</item>
+        <item name="android:inputType">textCapSentences</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
     <!-- BUTTONS -->
 
     <style name="baseButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
